# ste-work

./: .gitignore  DEPLOYMENT.md  README.md  package-lock.json  package.json  tailwind.config.ts
app/: globals.css  layout.tsx  (+2 more)
contracts/: Cargo.toml
contracts/escrow_contract/: Cargo.toml
contracts/escrow_contract/src/: lib.rs  test.rs
contracts/escrow_contract/test_snapshots/test/: test_accept_job_assigns_freelancer.1.json  test_accept_job_twice_panics.1.json  test_approve_multi_milestone_partial_release.1.json  test_approve_releases_payment_to_freelancer.1.json  test_approve_sets_status_approved.1.json  test_cancel_job_already_accepted_panics.1.json  test_cancel_job_happy_path.1.json  test_claim_timeout_before_deadline_panics.1.json  test_claim_timeout_no_deadline_panics.1.json  test_claim_timeout_releases_after_deadline.1.json  test_dispute_by_stranger_panics.1.json  test_dispute_changes_status.1.json  test_full_job_lifecycle.1.json  test_initialize_twice_panics.1.json  test_list_jobs_empty.1.json  test_list_jobs_pagination.1.json  test_list_jobs_returns_all.1.json  test_post_job_increments_count.1.json  test_post_job_milestone_starts_locked.1.json  test_post_job_multi_milestone.1.json  test_post_job_returns_id_one.1.json  test_post_job_stores_correct_data.1.json  test_post_job_transfers_funds_to_escrow.1.json  test_post_job_unsupported_token_panics.1.json  test_refund_milestone_before_deadline_panics.1.json  test_refund_milestone_happy_path.1.json  test_resolve_50_50_split.1.json  (+5 more)
contracts/work_token/: Cargo.toml
contracts/work_token/src/: lib.rs  test.rs
(+29 files in other folders)
